--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.1.3",
-		"bootstrap": "^5.2.2"
+		"bootstrap": "^5.2.2",
+		"dotenv": "^16.0.3",
+		"gridjs": "^5.1.0"
 	}
 }
